--- a/src/app/core/menu/menu.component.html
+++ b/src/app/core/menu/menu.component.html
@@ -1,1 +1,8 @@
-<p>menu works!</p>
+<mat-toolbar>
+    <div>
+    <span>Ötletdoboz</span>
+    </div>
+    <div>
+        <button mat-button><mat-icon >logout</mat-icon></button>
+    </div>
+</mat-toolbar>
